# qwikstart

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  pyproject.toml  setup.cfg  tox.ini
docs/: Makefile  conf.py  configuration.rst  developer_guide.rst  index.rst  make.bat  operations_reference.rst  qwikstart_definitions.rst  understanding_operations.rst
docs/_static/css/: custom.css
docs/operations/: add_file.rst  add_file_tree.rst  aliases.rst  append_text.rst  context_from_regex.rst  define_context.rst  echo.rst  edit_json.rst  edit_yaml.rst  find_files.rst  find_tag_and_insert_text.rst  find_tagged_line.rst  insert_text.rst  prompt.rst  search_and_replace.rst  shell.rst  subtask.rst
examples/: README.md  basic-hello-world.yml  code-highlighting.yml  copy_file_tree.yml  edit_yaml.yml  find_files.yml  hello-world-with-explicit-namespace.yml  hello_world.yml  prompt.yml  prompt_user.yml  shell.yml
examples/cookiecutter/: audreyr-pypackage.yml
examples/data/: docker-compose.yml  package.json  settings.py
examples/docs/: add_file_tree.yml
examples/hello_world/: qwikstart.yml
examples/opconfig/: define_and_echo.yml  define_and_echo_with_input_mapping.yml  define_and_echo_with_input_namespace.yml  define_and_echo_with_output_mapping.yml  define_and_echo_with_output_namespace.yml  echo_with_local_context.yml
examples/operations/: add_file.yml  append_text.yml  context_from_regex.yml  echo.yml  edit_json.yml  edit_yaml.yml  find_files.yml  find_tag_and_insert_text.yml  find_tagged_line.yml  insert_text.yml  prompt.yml  search_and_replace.yml  shell.yml  subtask.yml
examples/operations/templates/: hello_world.txt
qwikstart/: actions.py  base_context.py  cli.py  config.py  exceptions.py  execution_context.py  operations.py  parser.py  tasks.py  testing.py
qwikstart/cli/: main.py  resolver.py  utils.py
qwikstart/cli/templates/: operation_help.term
qwikstart/operations/: __init__.py  add_file.py  add_file_tree.py  append_text.py  base.py  context_from_regex.py  define_context.py  echo.py  edit_json.py  edit_yaml.py  find_files.py  find_tag_and_insert_text.py  find_tagged_line.py  inject_text.py  insert_text.py  prompt.py  prompt_user.py  search_and_replace.py  shell.py  subtask.py  utils.py
qwikstart/operations/tests/: test_find_line_and_inject_text.py  test_find_tagged_line.py  test_inject_text.py
qwikstart/parser/: __init__.py  core.py  operations.py  tasks.py
qwikstart/repository/: __init__.py  base.py  core.py  git.py  loaders.py  local.py  yamllint.py
qwikstart/tests/: test_actions.py  test_operations.py
qwikstart/utils/: __init__.py  core.py  dict_utils.py  filesystem.py  http.py  input_types.py  io.py  logging.py  prompt.py  regex.py  templates.py  text_utils.py
tests/: helpers.py  test_cli.py  test_config.py  test_parser.py  test_tasks.py
tests/cli/: test_main.py  test_resolver.py  test_utils.py
tests/operations/: test_add_file.py  test_add_file_tree.py  test_append_text.py  test_base.py  test_context_from_regex.py  test_define_context.py  test_echo.py  test_edit_json.py  test_edit_yaml.py  test_find_files.py  test_find_line_and_inject_text.py  test_find_line_and_insert_text.py  test_find_tag_and_insert_text.py  test_find_tagged_line.py  test_inject_text.py  test_insert_text.py  test_prompt.py  test_prompt_user.py  test_search_and_replace.py  test_shell.py  test_subtask.py
tests/parser/: test_operations.py  test_tasks.py
tests/repository/: test_git.py  test_loaders.py  test_local.py
tests/stubs/: git.pyi  yaml.pyi
tests/stubs/binaryornot/: check.pyi
tests/stubs/prompt_toolkit/: __init__.pyi  completion.pyi  validation.pyi
tests/stubs/pyfakefs/: fake_filesystem.pyi  fake_filesystem_unittest.pyi
tests/stubs/pygments/: __init__.pyi  util.pyi
tests/stubs/pytest/: __init__.pyi  lexers.pyi
tests/stubs/ruamel/: yaml.pyi
tests/stubs/yamllint/: cli.pyi  config.pyi  linter.pyi
tests/utils/: test_core.py  test_dict_utils.py  test_filesystem.py  test_http.py  test_input_types.py  test_prompt.py  test_regex.py  test_templates.py  test_text_utils.py
