[tool.isort]
default_section = "THIRDPARTY"
known_first_party = "qwikstart"
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[tool.poetry]
name = "qwikstart"
version = "0.8.0"
description = "Code generator for automating configuration, setup, and yak shaving."
readme = "README.rst"
repository = "https://github.com/tonysyu/qwikstart"
documentation = "https://qwikstart.readthedocs.io/"
authors = ["Tony S. Yu <tsyu80@gmail.com>"]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: BSD License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = ["console", "terminal"]

[tool.poetry.dependencies]
python = "^3.7"
sphinx = { version = "^4.5.0", optional = true }
sphinx-autobuild = { version = "*", optional = true }
sphinxcontrib-apidoc = { version = "^0.3.0", optional = true}
sphinxcontrib-napoleon = { version = "*", optional = true }
rope = "^0.23.0"
typing-extensions = "^4.1.1"
jinja2 = "^3.1.1"
click = "^8.1.2"
# The dataclasses module is not in the stdlib in Python 3.6
dataclasses = { version = "^0.7", python = "~3.6" }
binaryornot = "^0.4.4"
colorlog = "^6.6.0"
termcolor = "^1.1.0"
prompt-toolkit = "^3.0.3"
pygments = "^2.5.2"
jinja2-time = "^0.2.0"
requests = "^2.23.0"
"ruamel.yaml" = "^0.17.21"
gitpython = "^3.1.0"
yamllint = "^1.23.0"

[tool.poetry.dev-dependencies]
coverage = "*"
flake8 = "*"
ipdb = "^0.13.9"
mock = "*"
# Pin pytest < 5.4 until pytest-sugar is fixed
# See https://github.com/Teemu/pytest-sugar/issues/187
pytest = "7.1.1"
pytest-cov = "*"
pytest-sugar = "*"
twine = "*"
wheel = "*"
pre-commit = "^2.18.1"
pyfakefs = "^3.7"
flake8-bugbear = "^22.3.23"
mypy = "^0.942"
bump2version = "^1.0.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autobuild", "sphinxcontrib-apidoc", "sphinxcontrib-napoleon"]

[tool.poetry.scripts]
qwikstart = "qwikstart.cli.main:main"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
